logs/2022-09-13.exception.log
2022-09-13 19:35:25 error : uncaughtException: Unexpected identifier
D:\numble\model\doctorinf.js:6
    doctor_id: String,
    ^^^^^^^^^

SyntaxError: Unexpected identifier
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1033:15)
    at Module._compile (node:internal/modules/cjs/loader:1069:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (D:\numble\controller\doctor.js:1:16)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
2022-09-13 19:51:06 error : uncaughtException: Route.post() requires a callback function but got a [object Undefined]
Error: Route.post() requires a callback function but got a [object Undefined]
    at Route.<computed> [as post] (D:\numble\node_modules\express\lib\router\route.js:211:15)
    at Function.proto.<computed> [as post] (D:\numble\node_modules\express\lib\router\index.js:521:19)
    at Object.<anonymous> (D:\numble\routes\doctor.js:11:8)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (D:\numble\app.js:14:22)
2022-09-13 19:52:49 error : uncaughtException: Route.post() requires a callback function but got a [object Undefined]
Error: Route.post() requires a callback function but got a [object Undefined]
    at Route.<computed> [as post] (D:\numble\node_modules\express\lib\router\route.js:211:15)
    at Function.proto.<computed> [as post] (D:\numble\node_modules\express\lib\router\index.js:521:19)
    at Object.<anonymous> (D:\numble\routes\doctor.js:11:8)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (D:\numble\app.js:14:22)
